# numomagic-bot

./: .dockerignore  .env  .env.example  .gitignore  4-digits.json  Dockerfile  README.md  action.py  db.py  description.json  description.py  docker-compose.yml  energy.py  energy_dict.py  handlers.py  keyboards.py  lang.py  logging_config.py  main.py  menu.py  pyproject.toml  requirements.txt  states.py  user_actions.csv  users.py
.github/workflows/: deploy.yml  docker-build.yml  test.yml
db/: users.db
dialogs/: dialogs.py
dicts/: 4-digits-ara.json  4-digits-chi.json  4-digits-deu.json  4-digits-eng.json  4-digits-esp.json  4-digits-fra.json  4-digits-hin.json  4-digits-jpn.json  4-digits-rus.json  4-digits.json  5-digits-ara.json  5-digits-chi.json  5-digits-deu.json  5-digits-eng.json  5-digits-esp.json  5-digits-fra.json  5-digits-hin.json  5-digits-jpn.json  5-digits-rus.json  5-digits.json  6-digits-ara.json  6-digits-chi.json  6-digits-deu.json  6-digits-eng.json  6-digits-esp.json  6-digits-fra.json  6-digits-hin.json  6-digits-jpn.json  6-digits-rus.json  6-digits.json
handlers/: handlers.py
logger/: config.json  logger.py
middlewares/: paywall.py
states/: state_group.py
tests/: conftest.py  test_paywall.py  test_webhook.py
webhook/: __init__.py  webhook.py
windows/: calendar_window.py  common_elements.py  join_channel_window.py  language_window.py  payment_window.py  payment_windows.py  recommendation_window.py  subscribe_window.py  windows.py
